# m3m

./: .gitignore  CHANGELOG.md  CLAUDE.md  INIT_COMMANDS.md  LICENSE  PLAN-P0-BACKLINK_PANEL.md  PLAN-P0-CORE_EDITOR.md  PLAN-P0-TAG_SIDEBAR.md  PLAN-P0-WATCHER.md  README.md  RELEASE.md  SPEC.md  eslint.config.js  index.html  package.json  release-plz.toml  tailwind.config.ts  vite.config.ts  vitest.config.ts
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
scripts/: macos-build.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: CHANGELOG.md  Cargo.toml  Info.plist  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_settings.rs  frontmatter.rs  indexer.rs  lib.rs  registry.rs  vault_settings.rs
src-tauri/src/commands/: graph.rs  mod.rs  notes.rs  search.rs  settings.rs  vault.rs  vault_settings.rs
src-tauri/src/models/: note.rs
src-tauri/src/tests/: frontmatter_test.rs  indexer_test.rs  mod.rs  notes_test.rs  registry_test.rs
src/components/changelog/: ChangelogDialog.tsx
src/components/context-panel/: AddPropertyRow.tsx  AgentTab.tsx  (+10 more)
src/hooks/: useBacklinks.ts  useSearch.ts  useTour.ts  useUpdater.ts  useVault.test.ts  useVault.ts  useVaultRegistry.test.ts  useVaultRegistry.ts
src/lib/: changelog.ts  frontmatter.test.ts  frontmatter.ts  ipc.ts  markdown.test.ts  markdown.ts  tours.ts  ulid.test.ts  ulid.ts  wikilinkSync.test.ts  wikilinkSync.ts
src/store/: settings.ts  ui.ts  vault.test.ts  vault.ts  vaultSettings.ts
src/types/: note.ts  settings.ts  vault.ts
(+49 files in other folders)
