[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["wry", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2.3.5"
tauri-plugin-fs = "2.5.0"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-opener = "2.5.3"
notify = { version = "8.2.0", features = ["macos_fsevent"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite", "macros"] }
lancedb = "0.14.0"
arrow-array = "53"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
tokio = { version = "1.52.1", features = ["full"] }
automerge = "0.6.1"
sodiumoxide = "0.2.7"
ulid = "1.2.1"
anyhow = "1.0.102"
thiserror = "2.0.18"
